[package]
name = "ping"
version = "0.6.0"
authors = ["AN Long <aisk1988@gmail.com>"]
license = "MIT"
description = "Simple and naive ping implementation in Rust."
repository = "https://github.com/aisk/rust-ping"
edition = "2018"

[dependencies]
socket2 = { version = "0.4", features = ["all"] }
thiserror = "1.0"
rand = "0.8"
