[package]
name = "ping"
version = "0.6.1"
authors = ["AN Long <aisk1988@gmail.com>"]
license = "MIT"
description = "Simple and naive ping implementation in Rust."
repository = "https://github.com/aisk/rust-ping"
edition = "2024"

[dependencies]
socket2 = { version = "0.6", features = ["all"] }
thiserror = ">=1.0, <=2.1"
rand = ">=0.8, <=0.9"

[dev-dependencies]
libc = "0.2"
